[tool.poetry]
name = "repl_python3_Discord-Bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
Flask = "^2.0.1"
replit = "^3.1.0"
PyNaCl = "^1.4.0"
ffmpeg = "^1.4"
bs4 = "^0.0.1"
youtube_dl = "^2021.6.6"
mutagen = "^1.45.1"
requests = "^2.26.0"
redis = "^3.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
